[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"


[project]
name = "tgradish"
version = "1.0.0"
authors = [
  { name="sliva0", email="sliva0mk@gmail.com" },
]
description = "Simple video converting cli utility specializing in Telegram videostickers with the ability to bypass the 3 second limit"
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic >= 1.10.2",
    "tomli >= 2.0.1"
]

[project.urls]
"Homepage" = "https://github.com/sliva0/tgradish"
"Author's telegram" = "https://t.me/sliva0"